# pacdec

./: Cargo.toml  README.md
src/: app.rs  cli.rs  commands.rs  config.rs  kdl_edit.rs  list_pkgs.rs  main.rs  packages.rs  pacman.rs  prompts.rs
